# figure_generator

./: .gitignore  CLAUDE.md  Makefile  PaperVizAgent.md  README.md  per_session_prompt.txt  pyproject.toml
.claude/: settings.local.json
.claude/agents/: figgen-compile-runner.md  figgen-critic.md  figgen-geotech.md  figgen-journal-compliance.md  figgen-matplotlib-author.md  figgen-mermaid-author.md  figgen-orchestrator.md  figgen-planner.md  figgen-svg-author.md  figgen-tikz-author.md
.claude/commands/: figgen-new.md  figgen-refine.md  refine-markup.md
.github/workflows/: build-figures.yml
configs/: paths.yaml
configs/journals/: geotechnique.yaml  isfog.yaml  marine_structures.yaml  ocean_engineering.yaml  poster.yaml  thesis.yaml
configs/palettes/: categorical.yaml  offshore.yaml
data/: README.md
data/raw/: example_scour.csv  example_scour.units.yaml
docs/: HUMAN-LOOP.md  PILOT-P1-P5-P6-REPORT.md  backends.md  journals.md  pipeline.md
figures/: p1_scoreboard.csv  p1_scoreboard.md
figures/example_scour/: CAPTION.md  config.yaml  (+2 more)
gallery/: build_gallery.py  mkdocs.yml
papers/: README.md
prompts/: critic.md  critic_vision.txt  geotech.md  journal_compliance.md  mermaid_author.md  mpl_author.md  planner.md  svg_author.md  tikz_author.md
scripts/: _template_figure.py  freeze.py  iteration_gallery.py  journal_lint.py  p1_sweep.py  publish_paper.py  publish_to_notes.py  refine.py  run_pipeline.py  thaw.py  validate_pdf.py  vision_review.py  watch.py
styles/: base.mplstyle  geotechnique.mplstyle  isfog.mplstyle  ocean_engineering.mplstyle  poster.mplstyle  thesis.mplstyle
tests/: test_agents.py  test_backends.py  test_figures.py  test_phase0_gates.py  test_pipeline.py
(+443 files in other folders)
